Se creó el evento que detecta cambios en el editor de texto.

--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8">
-  <title>Editor de Texto</title>
+  <title>Sin título: Editor de Texto</title>
   <!-- https://electronjs.org/docs/tutorial/security#csp-meta-tag -->
   <meta http-equiv="Content-Security-Policy" content="script-src 'self';" />
   <link rel="stylesheet" href="../assets/css/main.css">
@@ -13,6 +13,9 @@
 <body>
   <div id="mainTextEditor" contenteditable="true" autofocus>
   </div>
+
+
+  <script src="index.js"></script>
 </body>
 
 </html>
