Se agregó la funcionalidad para poder guardar los archivos.

--- a/src/index.html
+++ b/src/index.html
@@ -11,8 +11,7 @@
 </head>
 
 <body>
-  <div id="mainTextEditor" contenteditable="true" autofocus>
-  </div>
+  <div id="mainTextEditor" contenteditable="true"></div>
 
 
   <script src="index.js"></script>
