Se agregó la funcionalidad para buscar en el texteditor.

--- a/src/searchBox.html
+++ b/src/searchBox.html
@@ -13,7 +13,7 @@
     <div class="searchBar">
         <label for="buscar">Buscar</label>
         <input type="text" id="buscar" autofocus>
-        <button id="realizar-busqueda">Buscar</button>
+        <button id="realizar-busqueda">Buscar Siguiente</button>
         <button id="cancelar-busqueda">Cancelar</button>
     </div>
 
