--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8">
-  <title>Sin título: Editor de Texto</title>
+  <title>App</title>
   <!-- https://electronjs.org/docs/tutorial/security#csp-meta-tag -->
   <meta http-equiv="Content-Security-Policy" content="script-src 'self';" />
   <link rel="stylesheet" href="../assets/css/main.css">
@@ -11,7 +11,7 @@
 </head>
 
 <body>
-  <div id="mainTextEditor" contenteditable="true"></div>
+  <div id="mainTextEditor">Here</div>
 
 
   <script src="index.js"></script>
