--- a/src/index.html
+++ b/src/index.html
@@ -15,7 +15,7 @@
   <body>
     <div id="mainContainer">
       <div class="title">
-        <h1>DOCUMENTOS</h1>
+        <h1>EXPEDIENTE</h1>
       </div>
 
       <div class="content">
